@@ -29,8 +29,6 @@ AC_CONFIG_FILES([
   include/Makefile
   libc/Makefile
   libc/include/Makefile
-  include/kernaux.h
-  include/kernaux/multiboot2.h
   include/kernaux/version.h
   tests/Makefile
 ])
