@@ -1,0 +1,26 @@
+/*
+    We don't include <kernaux/asm/*.h> because they
+    contain architecture-specific assembly functions.
+*/
+
+#include <kernaux/arch/i386.h>
+#include <kernaux/arch/riscv64.h>
+#include <kernaux/arch/x86_64.h>
+#include <kernaux/assert.h>
+#include <kernaux/cmdline.h>
+#include <kernaux/elf.h>
+#include <kernaux/free_list.h>
+#include <kernaux/generic/display.h>
+#include <kernaux/generic/malloc.h>
+#include <kernaux/generic/mutex.h>
+#include <kernaux/macro.h>
+#include <kernaux/mbr.h>
+#include <kernaux/memmap.h>
+#include <kernaux/multiboot2.h>
+#include <kernaux/multiboot2/header_macro.h>
+#include <kernaux/ntoa.h>
+#include <kernaux/pfa.h>
+#include <kernaux/printf.h>
+#include <kernaux/printf_fmt.h>
+#include <kernaux/units.h>
+#include <kernaux/version.h>
