@@ -1,28 +1,0 @@
-/*
-    We don't include <kernaux/asm/*.h> because they
-    contain architecture-specific assembly functions.
-*/
-
-#include <kernaux/assert.h>
-#include <kernaux/macro.h>
-#include <kernaux/version.h>
-
-#include <kernaux/generic/malloc.h>
-#include <kernaux/generic/mutex.h>
-
-@comment_line_arch_i386@#include <kernaux/arch/i386.h>
-@comment_line_arch_riscv64@#include <kernaux/arch/riscv64.h>
-@comment_line_arch_x86_64@#include <kernaux/arch/x86_64.h>
-
-@comment_line_cmdline@#include <kernaux/cmdline.h>
-@comment_line_elf@#include <kernaux/elf.h>
-@comment_line_free_list@#include <kernaux/free_list.h>
-@comment_line_mbr@#include <kernaux/mbr.h>
-@comment_line_memmap@#include <kernaux/memmap.h>
-@comment_line_multiboot2@#include <kernaux/multiboot2.h>
-@comment_line_multiboot2@#include <kernaux/multiboot2/header_macro.h>
-@comment_line_ntoa@#include <kernaux/ntoa.h>
-@comment_line_pfa@#include <kernaux/pfa.h>
-@comment_line_printf@#include <kernaux/printf.h>
-@comment_line_printf_fmt@#include <kernaux/printf_fmt.h>
-@comment_line_units@#include <kernaux/units.h>
